--- a/App/View/Admin/menu.html
+++ b/App/View/Admin/menu.html
@@ -3,9 +3,11 @@
 {% block title %}Admin Menu{% endblock %}
 
 {% block body %}
-	<h1>Admin menu</h1>
-	<ul>
-		<li><a href="/admin/user/list">List Users</a></li>
-		<li><a href="/admin/book/list">List Books</a></li>
-	</ul>
+	<main class="s-main-con">
+		<h1 class="s-tittle">Admin menu</h1>
+		<ul style="padding: 16px;">
+			<li><a href="/admin/user/list">List Users</a></li>
+			<li><a href="/admin/book/list">List Books</a></li>
+		</ul>
+	</main>
 {% endblock %}
