--- a/app/view/base.html
+++ b/app/view/base.html
@@ -36,7 +36,7 @@
 	<div id="flash-con">
 		{% for message in flash %}
 			<div class="flash-message flash-{{message.type}}">
-				<img src="img/icon/flash/{{ message.type }}.svg">
+				<img src="/img/icon/flash/{{ message.type }}.svg">
 				<h3>{{ message.text }}</h3>
 			</div>
 		{% endfor %}
