--- a/App/View/Access/login.html
+++ b/App/View/Access/login.html
@@ -17,11 +17,10 @@
 				<div>
 					<input type="password" name="password" id="password" required>
 						<button type="button" onclick="toggle_password_visibility()">
-							<img id="password-visibility-img" src="/img/icon/visibility_off.svg">
+							<img id="password-visibility-img" src="/img/icon/visibility_on.svg">
 						</button>
 					</input>
 				</div>
-				<!--small>Password must be 8 or above characters and contain at least a letter and a number.</small-->
 			</fieldset>
 			<fieldset class="s-button">
 				<button type="submit">Login!</button>
@@ -37,10 +36,10 @@
 		let vis = document.getElementById("password-visibility-img");
 		if(password.type === "password"){
 			password.type = "text";
-			vis.src = "/img/icon/visibility_on.svg";
+			vis.src = "/img/icon/visibility_off.svg";
 		} else {
 			password.type = "password"
-			vis.src = "/img/icon/visibility_off.svg";
+			vis.src = "/img/icon/visibility_on.svg";
 		}
 		return false;
 	}
