Added book searching

--- a/App/View/Admin/menu.html
+++ b/App/View/Admin/menu.html
@@ -7,6 +7,7 @@
 		<h1 class="s-tittle">Admin menu</h1>
 		<ul style="padding: 16px;">
 			<li><a href="/admin/user/list">List Users</a></li>
+			<li><a href="/admin/user/search">Search Users</a></li>
 			<li><a href="/admin/book/list">List Books</a></li>
 		</ul>
 	</main>
