Updates around styling

--- a/App/View/Book/edit.html
+++ b/App/View/Book/edit.html
@@ -23,7 +23,7 @@
 			</fieldset>
 			<fieldset class="s-fieldset">
 				<label>Cover Image</label>
-				<input type="file" name="cover_image" value="{{ book.cover_image }}" required>			
+				<input type="file" name="cover_image" value="{{ book.cover_image }}">			
 			</fieldset>
 			<fieldset class="s-fieldset">
 				<label>Author</label>
