--- a/app/view/register/new.html
+++ b/app/view/register/new.html
@@ -49,7 +49,7 @@
 				<label>Address</label required>
 				<input type="text" value="{{ user.address }}" name="address">
 			</fieldset>
-			<fieldset class="s-fieldset">
+			<fieldset class="s-checkbox">
 				<input type="checkbox" name="terms" required>
 				<label>I read and agree with the <a href="terms.html.php">Terms and Conditions</a></label>
 			</fieldset>
